--- a/src/main/java/views/budget/BudgetCreateView.form
+++ b/src/main/java/views/budget/BudgetCreateView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="549" height="558"/>
+      <xy x="20" y="20" width="549" height="608"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -130,11 +130,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <model>
-                    <item value="Categoría"/>
-                    <item value="Bandera"/>
-                    <item value="Taza"/>
-                  </model>
+                  <model/>
                 </properties>
               </component>
               <component id="9fc23" class="javax.swing.JComboBox" binding="subCategoryComboBox">
@@ -320,7 +316,7 @@
               <text value="Visualizar presupuesto"/>
             </properties>
           </component>
-          <component id="671cd" class="javax.swing.JButton" binding="crearPresupuestoButton" default-binding="true">
+          <component id="671cd" class="javax.swing.JButton" binding="budgetCreateButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
