--- a/src/main/java/views/products/ProductCreateView.form
+++ b/src/main/java/views/products/ProductCreateView.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="d5ec0" binding="productSpecsContainer" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d5ec0" binding="productSpecsContainer" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -32,25 +32,12 @@
               <text value="Nombre:"/>
             </properties>
           </component>
-          <component id="bb112" class="javax.swing.JComboBox" binding="categoryComboBox">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <model>
-                <item value=""/>
-                <item value="Remeras"/>
-                <item value="Banderas"/>
-                <item value="Tazas"/>
-              </model>
-            </properties>
-          </component>
           <component id="92fc2" class="javax.swing.JLabel" binding="categoryLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Categoría"/>
+              <text value="Categoría:"/>
             </properties>
           </component>
           <component id="cdffb" class="javax.swing.JTextField" binding="productDescriptionField">
@@ -84,6 +71,28 @@
             <properties>
               <text value="Precio:"/>
             </properties>
+          </component>
+          <component id="bb112" class="javax.swing.JComboBox" binding="categoryComboBox">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <model/>
+            </properties>
+          </component>
+          <component id="2b87" class="javax.swing.JLabel" binding="subCategoryLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="SubCategoría:"/>
+            </properties>
+          </component>
+          <component id="e22fd" class="javax.swing.JComboBox" binding="subCategoryComboBox">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
