--- a/src/main/java/views/budget/BudgetCreateView.form
+++ b/src/main/java/views/budget/BudgetCreateView.form
@@ -108,7 +108,7 @@
                       <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Buscar Cliente"/>
+                      <text value="Buscar cliente"/>
                     </properties>
                   </component>
                 </children>
@@ -424,7 +424,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Elminar producto/s"/>
+              <text value="Eliminar producto/s"/>
             </properties>
           </component>
         </children>
